# cookiecutter-21cmfast-plugin

./: CHANGELOG.rst  CONTRIBUTING.rst  README.rst  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.repo_name}}/: .coveragerc  .flake8  .pre-commit-config.yaml  CONTRIBUTING.rst  LICENSE  README.rst  pyproject.toml  setup.cfg  setup.py
{{cookiecutter.repo_name}}/ci/: test_suite.yaml
{{cookiecutter.repo_name}}/docs/: conf.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/: __init__.py  __main__.py  cli.py  {{cookiecutter.c_extension_module}}.c  {{cookiecutter.c_extension_module}}_build.py
{{cookiecutter.repo_name}}/tests/: test_{{cookiecutter.package_name}}.py
